@@ -1,3 +1,9 @@
+2010-11-03	The InnoDB Team
+
+	* include/btr0btr.h, include/btr0btr.ic, dict/dict0crea.c:
+	Fix Bug#57947 InnoDB diagnostics shows btr_block_get calls
+	instead of real callers
+
 2010-11-02	The InnoDB Team
 
 	* row/row0sel.c:
